[package]
name = "rmx"
version = "0.1.0"
authors = ["ruescasd <fastness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.5.0"
curve25519-dalek = {version = "3.0.0", features = ["serde"]}
bincode = "1"
rand = "0.7.3"
sha2 = "0.9.1"
generic-array = "0.14.4"
hex = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
